.local-manifest/monitor/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana

spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: http
      port: 80
      targetPort: http
